--- a/index_backup.html
+++ b/index_backup.html
@@ -19,25 +19,19 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<!-- TODO - decide if logo needed
-							<span class="logo"><img src="images/logo.svg" alt="" /></span> -->
-						<h1>Alon Rosenberg</h1>
-						<!-- TODO decide if par text needed <p>Just another free, fully responsive site template<br /> -->
-						<!-- built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p> -->
-						<ul class="icons">
-							<li><a href="mailto:alon.r1@gmail.com" class="fa fa-envelope alt"><span class="label">Mail</span></a></li>
-							<li><a href="https://github.com/AlonRosenberg1" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.linkedin.com/in/alon-rosenberg/" class="icon brands fa-linkedin alt"><span class="label">Dribbble</span></a></li>
-						</ul>
+						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<h1>Stellar</h1>
+						<p>Just another free, fully responsive site template<br />
+						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#Portfolio">Portfolio</a></li>
-							<li><a href="#Courses">Courses</a></li>
-							<!-- <li><a href="#cta">Get Started</a></li> -->
+							<li><a href="#intro" class="active">Introduction_test</a></li>
+							<li><a href="#first">First Section</a></li>
+							<li><a href="#second">Second Section</a></li>
+							<li><a href="#cta">Get Started</a></li>
 						</ul>
 					</nav>
 
@@ -49,80 +43,56 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Biography</h2>
+											<h2>Ipsum sed adipiscing</h2>
 										</header>
-										<p>Hello.
-											My name is Alon and i'm expereinced algorithm developer
-											i passion about bla bla and expereinced with bla bla
-										</p>
-										<!-- TODO - think if button is needed <ul class="actions">
+										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
+										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul> -->
+										</ul>
 									</div>
-									<span class="image"><img src="images/me.jpg" alt="" /></span>
+									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
 							</section>
 
-						<!-- portfolio Section -->
-							<section id="Portfolio" class="main special">
+						<!-- First Section -->
+							<section id="first" class="main special">
 								<header class="major">
-									<h2>Portfolio</h2>
-									<p>Here are some of the projects i've worked on.
-										Please note that most of my work is protected by IP so I can show only a limited and downgraded projects
-									</p>
+									<h2>Magna veroeros</h2>
 								</header>
 								<ul class="features">
-									<!-- TODO - think about changing icons-->
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>project 1</h3>
-										<p>short decription of project1.</p>
-										<ul class="actions special">
-											<a href="generic.html" class="button">Link</a>
-										</ul>
+										<h3>Ipsum consequat</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>project 2</h3>
-										<p>description2.</p>
-										<ul class="actions special">
-											<a href="generic.html" class="button">Link</a>
-										</ul>
+										<h3>Amed sed feugiat</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
-										<h3>project3</h3>
-										<p>desc 3.</p>
-										<ul class="actions special">
-											<a href="generic.html" class="button">Link</a>
-										</ul>
-									</li>
-									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>project4</h3>
-										<p>desc 4.</p>
-										<ul class="actions special">
-											<a href="generic.html" class="button">Link</a>
-										</ul>
+										<h3>Dolor nullam</h3>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 								</ul>
-								
-								<!-- <footer class="major">
+								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
-								</footer> -->
+								</footer>
 							</section>
 
-						<!-- courses Section -->
-							<section id="Courses" class="main special">
+						<!-- Second Section -->
+							<section id="second" class="main special">
 								<header class="major">
-									<h2>Academic courses</h2>
-									<p>I am holding a masters degree in electrical engineering.
-										In the degree I have took advance course in Machine learning, Computer Vision and Signal processing
-									</p>
+									<h2>Ipsum consequat</h2>
+									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
+									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
-								<!-- <ul class="statistics">
+								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
 										<strong>5,120</strong> Etiam
@@ -144,16 +114,16 @@
 										<strong>1,024</strong> Nullam
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p> -->
+								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">My academic knowledge</a></li>
+										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
 
 						<!-- Get Started -->
-							<!-- <section id="cta" class="main special">
+							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Congue imperdiet</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
@@ -165,36 +135,35 @@
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
-							</section> -->
+							</section>
 
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<!-- <section>
+						<section>
 							<h2>Aliquam sed mauris</h2>
 							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
-						</section> -->
+						</section>
 						<section>
-							<h2>Contact</h2>
+							<h2>Etiam feugiat</h2>
 							<dl class="alt">
-								<!-- <dt>Address</dt>
+								<dt>Address</dt>
 								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
 								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd> -->
+								<dd>(000) 000-0000 x 0000</dd>
 								<dt>Email</dt>
 								<dd><a href="#">information@untitled.tld</a></dd>
 							</dl>
 							<ul class="icons">
-								<!-- <li><a href="https://www.google.com" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
+								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
-								<li><a href="#" class="icon brands fa-linkedin alt"><span class="label">Dribbble</span></a></li>
+								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
 							</ul>
 						</section>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
