--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 									<!-- TODO - think about changing icons-->
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>project 1</h3>
-										<p>short decription of project1.</p>
+										<h3>Locating Dots</h3>
+										<p>Computer Vison project to locate dots on products</p>
 										<ul class="actions special">
-											<a href="generic.html" class="button">Link</a>
+											<a href="https://github.com/AlonRosenberg1/LocatingDots" class="button">Link</a>
 										</ul>
 									</li>
 									<li>
