--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 						<!-- TODO - decide if logo needed
 							<span class="logo"><img src="images/logo.svg" alt="" /></span> -->
 						<h1>Alon Rosenberg</h1>
+						<h1>Site is under construction!</h1>
 						<!-- TODO decide if par text needed <p>Just another free, fully responsive site template<br /> -->
 						<!-- built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p> -->
 						<ul class="icons">
@@ -53,7 +54,8 @@
 										</header>
 										<p>Hello.
 											My name is Alon and i'm expereinced algorithm developer
-											i passion about bla bla and expereinced with bla bla
+											i passion about Machine learning, Computer Vision and Algorithms
+											and expereinced with Matlab, Python and C++
 										</p>
 										<!-- TODO - think if button is needed <ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
