--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 											<h2>Biography</h2>
 										</header>
 										<p>Hello.
-											My name is Alon and i'm expereinced algorithm developer
-											i passion about Machine learning, Computer Vision and Algorithms
-											and expereinced with Matlab, Python and C++
+											My name is Alon and I'm an experienced Algorithm developer.<br>
+											I am passionate about Machine learning, Computer Vision and Signal processing Algorithms,
+											and experienced with Matlab, Python and C++ langueges.
 										</p>
-										<!-- TODO - think if button is needed <ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul> -->
+										 <ul class="actions">
+											<li><a href="experience.html" class="button">Experience</a></li>
+										</ul>
 									</div>
 									<span class="image"><img src="images/me.jpg" alt="" /></span>
 								</div>
@@ -70,7 +70,7 @@
 								<header class="major">
 									<h2>Portfolio</h2>
 									<p>Here are some of the projects i've worked on.
-										Please note that most of my work is protected by IP so I can show only a limited and downgraded projects
+										Please note that most of my work is protected by IP so I can show only a <b>limited and downgraded</b>selection of projects.
 									</p>
 								</header>
 								<ul class="features">
@@ -85,26 +85,26 @@
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>project 2</h3>
-										<p>description2.</p>
+										<h3>Gaze Tracking</h3>
+										<p>Computer Vision project to track user's gaze.</p>
 										<ul class="actions special">
-											<a href="generic.html" class="button">Link</a>
+											<a href="https://github.com/AlonRosenberg1/GazeTracking" class="button">Link</a>
 										</ul>
 									</li>
-									<li>
+									<!-- <li>
 										<span class="icon major style5 fa-gem"></span>
-										<h3>project3</h3>
+										<h3>ML project</h3>
 										<p>desc 3.</p>
 										<ul class="actions special">
 											<a href="generic.html" class="button">Link</a>
 										</ul>
-									</li>
+									</li> -->
 									<li>
 										<span class="icon major style5 fa-gem"></span>
-										<h3>project4</h3>
-										<p>desc 4.</p>
+										<h3>Audio utilities</h3>
+										<p>Signal processing project with 3 audio utilities.</p>
 										<ul class="actions special">
-											<a href="generic.html" class="button">Link</a>
+											<a href="https://github.com/AlonRosenberg1/Audio_utils" class="button">Link</a>
 										</ul>
 									</li>
 								</ul>
@@ -149,7 +149,7 @@
 								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p> -->
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">My academic knowledge</a></li>
+										<li><a href="academic_courses.html" class="button">My academic knowledge</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -180,25 +180,27 @@
 								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
 						</section> -->
+						<!--
 						<section>
 							<h2>Contact</h2>
 							<dl class="alt">
-								<!-- <dt>Address</dt>
+								<dt>Address</dt>
 								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
 								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd> -->
+								<dd>(000) 000-0000 x 0000</dd> 
 								<dt>Email</dt>
 								<dd><a href="#">information@untitled.tld</a></dd>
 							</dl>
 							<ul class="icons">
-								<!-- <li><a href="https://www.google.com" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
+								 <li><a href="https://www.google.com" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
+								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> 
 								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
+								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> 
 								<li><a href="#" class="icon brands fa-linkedin alt"><span class="label">Dribbble</span></a></li>
 							</ul>
 						</section>
+					-->
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
