--- a/experience.html
+++ b/experience.html
@@ -20,7 +20,6 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Alon Rosenberg - Experience</h1>
-						<!-- <p>Ipsum dolor sit amet nullam</p> -->
 					</header>
 
 				<!-- Main -->
@@ -28,62 +27,29 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<!-- <span class="image main"><img src="images/pic04.jpg" alt="" /></span> -->
 								<h2>Algorithm engineer. <a href="https://www.silentium.com"><u>Silentium</u></a> , Israel</h2>
-								<p>Silentium is a startup company which develops and manufacture high tech active noise reduction solutions for 
+								<p>Silentium is a startup company that develops and manufactures high tech active noise reduction solutions for 
 									the automotive market.</p>
-								<p>As an Algorithm engineer I researched, developed tested and debugged advance Signal processing algorithms in the audio domain.
-									A limited list of subjects I have worked with are: Predictive statistical algorithms, Beam steering algorithms, time and frequency domain signal analysis, tools and GUI development, lab setups.
+								<p>As an Algorithm engineer I researched, developed tested and debugged advanced Signal processing algorithms in the audio domain.
+									A short list of subjects I have worked with are: Predictive statistical algorithms, Beam steering algorithms, time and frequency domain signal analysis, tools and GUI development, lab setups.
 								</p>
-								<h2>Algorithm engineer and entrepreneur. Under the rader startup company</h2>
+								<h2>Algorithm engineer and entrepreneur. Under the radar startup company</h2>
 								<p>I have researched and developed a novel prototype for a program which tracks the user gaze using only a simple webcam.
-									A limited list of subjects i have worked with are: object detection, geometric translation and business development.
+									As part of this project I have worked on the following subjects: object detection, geometric translation and business development.
 								</p>
-								<h2>Algorithm engineer. <a href="https://www.linkedin.com/company/sphereo/">Sphereo</a> Israel.</h2>
-								<p>Sphereo is a startup company which develops advance audio algorithms for improving user experience</p>
-								<p>A limited list of subjects i have worked with are: Digital signal processing, time and frequency signal processing, frequency domain correlation, tools and GUI development. </p>
-								<h2>System engineer. <a href="https://www.intel.com">Intel</a> Israel.</h2>
-								<p>Intel is the largest semiconductors company. I was working in the WiFi division.
-									A limited list of subjects i have worked with are: Transmission power and frequency accuracy, Thermal compensation, regulatory compliance.
+								<h2>Algorithm engineer. <a href="https://www.linkedin.com/company/sphereo/"><u>Sphereo</u></a> Israel.</h2>
+								<p>Sphereo is a startup company that develops advanced audio algorithms for experiencing surround, multi channel audio on simple headphones.</p>
+								<p>A short list of subjects i have worked with are: Digital signal processing, time and frequency signal processing, frequency domain correlation, tools and GUI development. </p>
+								<h2>System engineer. <a href="https://www.intel.com"><u>Intel</u></a> Israel.</h2>
+								<p>Intel is one of the largest semiconductors companies in the world. I was working in the WiFi division.<br>
+									As a system engineer I have worked on the following subjects: Transmission power and frequency accuracy, thermal compensation, regulatory compliance.
 								</p>
-								<h2>RF engineer. <a href="https://www.rafael.co.il/">Rafael</a> Israel.</h2>
-								<p>Rafael is big homeland security company from Israel.
-									A limited list of subjects I have worked with are: Design and test of micron scale RF amplifiers, mixers and LNAs.
+								<h2>RF engineer. <a href="https://www.rafael.co.il/"><u>Rafael</u></a> Israel.</h2>
+								<p>Rafael is a big homeland security company in Israel.
+									A short list of subjects I have worked with are: Design and test of micron scale RF amplifiers, mixers and LNAs.
 								</p>
 							</section>
-
 					</div>
-
-				<!-- Footer --><!-- 
-					<footer id="footer">
-						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
-						</section>
-						<section>
-							<h2>Etiam feugiat</h2>
-							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
-								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
-							</dl>
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
-						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
- -->
 			</div>
 
 		<!-- Scripts -->
