--- a/index.html
+++ b/index.html
@@ -19,12 +19,8 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<!-- TODO - decide if logo needed
-							<span class="logo"><img src="images/logo.svg" alt="" /></span> -->
 						<h1>Alon Rosenberg</h1>
-						<h1>Site is under construction!</h1>
-						<!-- TODO decide if par text needed <p>Just another free, fully responsive site template<br /> -->
-						<!-- built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p> -->
+						<h2>Algorithm engineer with M.Sc in Electrical engineering</h2>
 						<ul class="icons">
 							<li><a href="mailto:alon.r1@gmail.com" class="fa fa-envelope alt"><span class="label">Mail</span></a></li>
 							<li><a href="https://github.com/AlonRosenberg1" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
@@ -37,7 +33,7 @@
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#Portfolio">Portfolio</a></li>
-							<li><a href="#Courses">Courses</a></li>
+							<li><a href="#Education">Education</a></li>
 							<!-- <li><a href="#cta">Get Started</a></li> -->
 						</ul>
 					</nav>
@@ -53,9 +49,9 @@
 											<h2>Biography</h2>
 										</header>
 										<p>Hello.
-											My name is Alon and I'm an experienced Algorithm developer.<br>
-											I am passionate about Machine learning, Computer Vision and Signal processing Algorithms,
-											and experienced with Matlab, Python and C++ langueges.
+											I am Alon, an experienced algorithm developer.<br>
+											I am passionate about machine learning, computer vision and signal processing algorithms,
+											and fluent with Matlab, Python and C++ languages.
 										</p>
 										 <ul class="actions">
 											<li><a href="experience.html" class="button">Experience</a></li>
@@ -69,24 +65,24 @@
 							<section id="Portfolio" class="main special">
 								<header class="major">
 									<h2>Portfolio</h2>
-									<p>Here are some of the projects i've worked on.
-										Please note that most of my work is protected by IP so I can show only a <b>limited and downgraded</b>selection of projects.
+									<p>Here are some of the projects I've worked on.<br>
+										This is a <u>limited and simplified</u> selection of my work due to most of my work protected by intellectual property laws.
 									</p>
 								</header>
 								<ul class="features">
 									<!-- TODO - think about changing icons-->
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Locating Dots</h3>
-										<p>Computer Vison project to locate dots on products</p>
+										<span class="icon solid major style1 fa-industry"></span>
+										<h3>Locating features</h3>
+										<p>Computer vison project to locate features on products</p>
 										<ul class="actions special">
 											<a href="https://github.com/AlonRosenberg1/LocatingDots" class="button">Link</a>
 										</ul>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Gaze Tracking</h3>
-										<p>Computer Vision project to track user's gaze.</p>
+										<span class="icon major style3 fa-eye"></span>
+										<h3>Gaze tracking</h3>
+										<p>Computer vision project to track user's gaze.</p>
 										<ul class="actions special">
 											<a href="https://github.com/AlonRosenberg1/GazeTracking" class="button">Link</a>
 										</ul>
@@ -108,99 +104,27 @@
 										</ul>
 									</li>
 								</ul>
-								
-								<!-- <footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer> -->
 							</section>
 
-						<!-- courses Section -->
-							<section id="Courses" class="main special">
+						<!-- Education Section -->
+							<section id="Education" class="main special">
 								<header class="major">
-									<h2>Academic courses</h2>
-									<p>I am holding a masters degree in electrical engineering.
-										In the degree I have took advance course in Machine learning, Computer Vision and Signal processing
+									<h2>Academic background</h2>
+									<p>I hold a master's degree in electrical engineering.<br>
+										In the degree I took advanced courses in machine learning, computer vision and signal processing.
 									</p>
 								</header>
-								<!-- <ul class="statistics">
-									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
-									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
-									</li>
-									<li class="style3">
-										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
-									</li>
-									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
-									</li>
-									<li class="style5">
-										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
-									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p> -->
+								
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="academic_courses.html" class="button">My academic knowledge</a></li>
+										<li><a href="academic_background.html" class="button">My academic background</a></li>
 									</ul>
 								</footer>
 							</section>
-
-						<!-- Get Started -->
-							<!-- <section id="cta" class="main special">
-								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-								</header>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section> -->
-
-					</div>
+						</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<!-- <section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
-						</section> -->
-						<!--
-						<section>
-							<h2>Contact</h2>
-							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd> 
-								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
-							</dl>
-							<ul class="icons">
-								 <li><a href="https://www.google.com" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> 
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> 
-								<li><a href="#" class="icon brands fa-linkedin alt"><span class="label">Dribbble</span></a></li>
-							</ul>
-						</section>
-					-->
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
