--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1>Alon Rosenberg</h1>
-						<h2>Algorithm engineer with M.Sc in Electrical engineering</h2>
+						<h2>Algorithm engineer & developer<br> M.Sc in Electrical engineering</h2>
 						<ul class="icons">
 							<li><a href="mailto:alon.r1@gmail.com" class="fa fa-envelope alt"><span class="label">Mail</span></a></li>
 							<li><a href="https://github.com/AlonRosenberg1" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
@@ -51,7 +51,8 @@
 										<p>Hello.
 											I am Alon, an experienced algorithm developer.<br>
 											I am passionate about machine learning, computer vision and signal processing algorithms,
-											and fluent with Matlab, Python and C++ languages.
+											and fluent with Matlab, Python and C++ languages.<br>
+											Open for oppertunities in Denver, CO area or remote.
 										</p>
 										 <ul class="actions">
 											<li><a href="experience.html" class="button">Experience</a></li>
