--- a/experience.html
+++ b/experience.html
@@ -27,6 +27,11 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
+								<h2>Embedded DSP engineer. <a href="https://iontra.com/"><u>Iontra</u></a> , CO, USA</h2>
+								<p>Iontra is a startup company that research advanced battery charging algorithms and develops those algorithms into charging solutions.</p>
+								<p>As an Embedded DSP engineer I developed, tested, optimized and debugged advanced software and Signal processing algorithms.
+									A short list of subjects I have worked with are: Predictive statistical algorithms and software architecture.
+								</p>
 								<h2>Algorithm engineer. <a href="https://www.silentium.com"><u>Silentium</u></a> , Israel</h2>
 								<p>Silentium is a startup company that develops and manufactures high tech active noise reduction solutions for 
 									the automotive market.</p>
